--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 			Over the years, Farnsworth's feud with Wernstrom continued to grow, and when an anomaly forms a short distance from the Earth the pair compete in Deathball to decide who will investigate. After Farnsworth's investigation proved unsuccessful the pair found themselves united for the first time since the pop quiz as they collaborated in research together, protested and shared a prison cell. But their new found friendship fell apart once more following an inter-universe relationship with Yivo.
 			When Mom faked a dark matter shortage in 3008 in order to increase the price of dark matter worldwide, Farnsworth finally told the tale of how he discovered it, and decided to end it all, so that scientists could spend their time on developing cleaner fuels, such as Whale Oil. Farnsworth managed to enter Mom's dark matter mine in Alaska, which turned out to be a Nibblonian farm, where Mom had kept Nibblonians imprisoned for years to produce dark matter. However, with the help of his crew and his long lost son Igner, Farnsworth managed to bring the crystals close enough together to render dark matter useless. After converting to whale oil and receiving a few bribes for scientific endorsements, he joined the rest of the crew on a journey into a wormhole. Although most of the crew were killed as the ship crashed into Earth in early 3010, he survives and brings them back to life.
 		</p>
+		<img src="http://theinfosphere.org/images/c/c3/FarnsworthIgner.png" alt="Dark Matters" width="500px">
 		<h3>
 			Awards
 		</h3>
@@ -79,11 +80,32 @@
 			Professor Farnsworth has been given the following awards.
 		</p>
 		<ul>
-		<li>The <a href="http://theinfosphere.org/Academy_of_Inventors">Academy of Inventors</a> award of 3000 (1ACV08).</li>
+			<li>The <a href="http://theinfosphere.org/Academy_of_Inventors">Academy of Inventors</a> award of 3000 (1ACV08).</li>
 			<li>One Fields Medal (TBWABB).</li>
 			<li>The <a href="http://theinfosphere.org/Polluting_Medal_of_Pollution">Polluting Medal of Pollution</a> (4ACV08).</li>
 		</ul>
-
+		<h2>
+			Relationships
+		</h2>
+		<p>
+			Farnsworth has at on at least 3 occasions gone back to his major love, Mom. At around age 90, he worked for Mom's Friendly Robot Company, where he designed robots for the company as well as toys, such as Q. T. McWhiskers, but Mom's suggestion of turning the toy into a giant made Farnsworth leave her, because she simply didn't understand him and from then on conflict grew between them.
+			He would later return to Mom's company to work on creating actual robots, but back then, robots were stiff moving and not very efficient, however, when he sacrificed fuel efficiency, he succeeded, unfortunately, this robot design also caused global warming. Why he left Mom this time remains unsettled, but it may be because he once realised she was evil.
+			On a third occasion, Farnsworth was once again at the company with Mom, where he discovered the secret of Dark Matter, around the time where Mom's sons were born. But when he found out she had left him for Dr. Ogden Wernstrom, he left once again.
+			While his relationship with Mom has certainly been his largest, it has not been his only one. During a brief period of regaining the appearance of youth using stem cells from GeneWorks, S.K.G., he found a girl willing to date him, although she also turned out to have used her tax rebate for a belly ring to make her appear thinner. There was also a brief fling with Hattie while they were on the Titanic. However since then, Hattie seems to hold a strong hatred towards him; accusing him of being a "cat hater".
+			In the episode "Proposition Infinity", it is shown that the Professor had a 40 year long relationship with a woman whom he met before Mom. This woman cheated on the Professor with a robot which caused the Professor's hatred towards robossexual couples. It was also later revealed that that woman was herself a robot, and her name was Unit 47.
+			A creepy utilization of his body occurred in "The Prisoner of Benda", when he trades bodies with Amy. Amy then proceeds to trade bodies with Leela, causing Fry to himself trade bodies with Dr. Zoidberg. Leela used Farnsworth's body to prove that her relationship with Fry is partially physical. At dinner, Leela (in Farnsworth's Body) is disgusted by Fry (in Zoidberg's body), and vice-versa. When Leela-Farnsworth tells Fry-Zoidberg to prove his love, Fry-Zoidberg passionately kisses Leela-Farnsworth. This eventually leads to Leela-Farnsworth having Intercourse with Fry-Zoidberg. this marks the first known time he physically slept with a male. Mentally, however, Leela was the one who slept with Fry-Zoidberg.
+		</p>
+		<h2>Creations</h2>
+		<p>
+			The professor, being a vivid inventor, has created numerous inventions, ranging from very sophisticated to down right crazy.
+			Here is a list of the Professor's inventions (in alphabetical order)
+		</p>
+		<ul>
+			<li><a href="http://theinfosphere.org/Adolf_Hitler_Shark">Adolf Hitler Shark</a></li>
+			<li><a href="http://theinfosphere.org/A_Device_That_Makes_Anyone_Sound_Like_Farnsworth">A Device That Makes Anyone Sound Like Farnsworth</a></li>
+			<li><a href="http://theinfosphere.org/Smell-O-Scope">Smell-O-Scope</a></li>
+		</ul>
+		
 	</div>
 
 </body>
