--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</p>
 		<img src="http://theinfosphere.org/images/6/66/Farnsworth_promo_2.jpg" alt="Professor Hubert J. Farnsworth">
 		<blockquote>
-			Professor Farnsworth: Oh, and if you kill anyone, make sure to eat their heart to gain their courage, their rich, tasty courage. [He smacks lips.]
+			 Oh, and if you kill anyone, make sure to eat their heart to gain their courage, their rich, tasty courage. [He smacks lips.] <cite>-Professor Farnsworth.</cite>
 		</blockquote>
 		<h2>
 			Personality
@@ -111,7 +111,7 @@
 			<li><a href="http://theinfosphere.org/A_Device_That_Makes_Anyone_Sound_Like_Farnsworth">A Device That Makes Anyone Sound Like Farnsworth</a></li>
 			<li><a href="http://theinfosphere.org/Smell-O-Scope">Smell-O-Scope</a></li>
 		</ul>
-		
+
 	</div>
 
 </body>
