four page website, home-about-gallery-work

--- a/index.html
+++ b/index.html
@@ -2,13 +2,34 @@
 <html lang="en">
 <head>
 	<title>Professor Hubert J. Farnsworth</title>
-	<meta charset="UTF-8">
 </head>
 <body>
 	<header>
 		<h1>
 			Professor Hubert J. Farnsworth		
 		</h1>
+		<ul>
+			<li>
+				<a href="./index.html">				
+					Home
+				</a>
+			</li>
+			<li>
+				<a href="./about.html">				
+					About the Professor
+				</a>
+			</li>
+			<li>
+				<a href="./gallery.html">				
+					Memorable Moments
+				</a>
+			</li>
+			<li>
+				<a href="./work.html">				
+					Inventions
+				</a>
+			</li>
+		</ul>
 	</header>	
 	<div>
 		<p>
@@ -17,102 +38,8 @@
 		</p>
 		<img src="http://theinfosphere.org/images/6/66/Farnsworth_promo_2.jpg" alt="Professor Hubert J. Farnsworth">
 		<blockquote>
-			 Oh, and if you kill anyone, make sure to eat their heart to gain their courage, their rich, tasty courage. [He smacks lips.] <cite>-Professor Farnsworth.</cite>
+			Oh, and if you kill anyone, make sure to eat their heart to gain their courage, their rich, tasty courage. [He smacks lips.] <cite>-Professor Farnsworth.</cite>
 		</blockquote>
-		<h2>
-			Personality
-		</h2>
-		<p>
-			Hubert Farnsworth is a mad scientist, though how extreme this tendency is varies depending on how writers feel best suits the episode. Farnsworth's name comes from Philo Farnsworth, who invented the television. In addition, his first name, Hubert, may come from Eric Kaplan's former professor, Hubert Dreyfus. The only thing his name has in common with the name of Philip J. Fry is the unsettled "J." as their middle initial, but this may just be a common joke Matt Groening sets for his characters.
-			Though Professor Farnsworth is a genius, he is also very senile and sometimes forgets things that had happened only moments earlier. He also has a habit of saying "Good news, everyone", which more often than not means bad news. He is known for following up his statements with completely contradictory statements, such as his definition of Space Honey from "The Sting". Hubert also often appears indifferent to the welfare of his crew, often sending them on dangerous missions which could get them killed, though it's highly unlikely that he does this intentionally. He could also sometimes have periods of maniacal laughter. However Farnsworth isn't actually a bad person and appears to share some level of friendship with the other members of Planet Express. He also cares about his clone, Cubert, treating him as though he were his biological son.
-			Farnsworth also enjoys public nudity, and may have been convicted. His urge to undress becomes much greater around Xmas.
-			One of the most frequent recurring gags in the show is that Farnsworth says/acts something but immediately the truth was that his intentions were the opposite compared to how it seemed. One example is in That Darn Katz! where Farnsworth complains that he is trying to run a meeting while the Planet Express Crew try to pet Professor Katz's cat then he states that means he should be the one petting the kitty.
-		</p>
-		<h2>
-			Biography
-		</h2>
-		<h3>
-			Early Life
-		</h3>
-		<p>
-			Hubert J. Farnsworth was born on 9 April, 2841 in a prison – although claimed until 3001 that it was actually 2851 – in the nerdiest slum of New New York, Hell's Laboratory. At age 8, he learned to read, albeit while still in diapers.
-			Hubert enjoyed his teenage years as a nerd with an affection for role-playing games. After 14 years of graduate school, Farnsworth became a scientist and designed such things as fast cars, trendy night spots and beautiful women, all out of his one-room apartment. Evidence suggests that he may also have been a hippie and a disco boy, possibly during graduate school. In The Near Death-Wish, it is revealed that Hubert spent 25 years in a mental institution at the behest of his parents.
-		</p>
-		<h3>
-			Career path
-		</h3>
-		<p>
-			By 2900 Farnsworth had taken a teaching position at Mars University where his most promising student was an up and coming young science undergrad named Ogden Wernstrom. Sadly, the two had a falling out over a pop-quiz score which lead to Wernstrom's hundred year quest for revenge (1ACV11). While retaining a role at the university, Hubert assisted Unit 47 in curing the pansie infestation (6ACV04) and was eventually hired at Mom's Friendly Robot Company, staying there for the next fifty years. During this time his inventiveness lead to the creation of many new products and breakthrough technologies, such as the use of Dark Matter as fuel, the first robot capable of qualifying for a boat loan (2ACV10) and a sport-utility robot, the design of which would become the basis of all robots running in the early 31st century (4ACV08). It was during this time he also began an on-again, off-again relationship with Mom (2ACV14), the owner of the company, who was having a similar relationship with Wernstrom. By the end of this period, Mom had fallen pregnant with their child, a secret she would keep from him for many years (BG). While on a mission for Mom in 2927 on Triton, Farnsworth contracted Yetiism and was only cured in 3011 in the Planet Express headquarters (6ACV18) by Dr Zoidberg.
-		</p>
-		<h3>
-			Planet Express
-		</h3>
-		<p>
-			After numerous tries with Mom, and with a need for money to fund his research, he founded Planet Express, an interstellar delivery company, on 2961. He hired his friend of 34 years, Dr. John A. Zoidberg as the company's staff doctor. Hermes Conrad was hired as the company's bureaucrat some time later. In 2998, Amy Wong entered the company as an engineering intern, but has since remained in the company for several years. Also in his employ is Scruffy, the company janitor who lives in the basement of Planet Express.
-			Farnsworth has had numerous crews, whom he frequently sends to their doom. As a result many have died horribly or gone missing; the first crew hired were swallowed by a Four-dimensional space whale. Shortly after one such instance, late on the 31st of December 2999 (1ACV01), he learned that he was not the last surviving member of his family. His long lost and far removed uncle, Philip J. Fry, had just been defrosted. Fry, Turanga Leela and Bender Bending Rodríguez were hired early the next morning and have been his longest surviving crew, who despite 12 years in the company remain alive.
-			Farnsworth doesn't always just send his crew on simple delivery missions, but has sent them on charity missions as well as highly controversial missions. Even when his crew and company is unrelated or unsuited to the task, he isn't shy to send them along anyway.
-		</p>
-		<h3>
-			Legacy
-		</h3>
-		<p>
-			As a member of the Academy of Inventors, the Professor has created many things. Often these don't live up to his expectations and are ridiculed by his fellow inventors. Occasionally, however, they can help save the day; the Smell-O-Scope for instance was laughed at by colleagues and Wernstrom had his revenge by giving it a poor grade, shortly afterward it detected a giant ball of garbage in space that was on a collision course with New New York. After the Planet Express crew averted the crisis, Wernstrom once more announced a thirst for revenge.
-			After his 150th birthday party, Hubert realised that he had no one to continue his work when he is gone. After days hidden in the lab, he emerged announcing that the clone he'd been growing the past twelve years would be his heir. Unfortunately, Cubert did not want to follow in his footsteps. Farnsworth finally decided that his life was over, and revealed his actual age, 160, the age at which Sunset Squad Robots would come and take him away to the Near Death Star. Soon after a rescue by his crew, Cubert finally decided to carry on with Farnsworth's research.
-		</p>
-		<h3>
-			Corporate Takeover
-		</h3>
-		<p>
-			After a brief reunion with Mom on Mother's Day of the previous year, 3002 saw Farnsworth's company taken over twice. On the first occasion, Cubert and Hermes' son Dwight expanded their paper route to consume Planet Express. Soon after this takeover, Awesome Express fell apart due to poor management. On the second occasion, a shareholder meeting resulted in a mysterious stranger taking over as CEO from Farnsworth. Castle's running of the company was more successful, despite no deliveries being made during this time. Inevitably the company dropped back to its original poor stock price after the new CEO's death and Farnsworth's reinstatement. Planet Express was also taken over by The Scammers because Farnsworth unwittingly signed a document transferring ownership of Planet Express to them, thinking it was a form to accept the money from a Spanish lottery.
-		</p>
-		<h3>
-			Old Problems
-		</h3>
-		<p>
-			When a heatwave hits and the usual method to counteract global warming fail, the Professor is forced to admit that all modern robots are descended from his designs, which produce lots of pollution. The scientists at the conference plan to destroy the robots is soon thwarted and Hubert received a medal for saving the planet and its robots. About a week later after his staff decided that he had become too old, they took him to The Bubbling Geezer a visit that resulted in everyone becoming younger. The eventual resolution of this situation took them to the Fountain of Aging, where the waters made him "even older" than he had been.
-		</p>
-		<h3>
-			Dark Matters
-		</h3>
-		<p>
-			Over the years, Farnsworth's feud with Wernstrom continued to grow, and when an anomaly forms a short distance from the Earth the pair compete in Deathball to decide who will investigate. After Farnsworth's investigation proved unsuccessful the pair found themselves united for the first time since the pop quiz as they collaborated in research together, protested and shared a prison cell. But their new found friendship fell apart once more following an inter-universe relationship with Yivo.
-			When Mom faked a dark matter shortage in 3008 in order to increase the price of dark matter worldwide, Farnsworth finally told the tale of how he discovered it, and decided to end it all, so that scientists could spend their time on developing cleaner fuels, such as Whale Oil. Farnsworth managed to enter Mom's dark matter mine in Alaska, which turned out to be a Nibblonian farm, where Mom had kept Nibblonians imprisoned for years to produce dark matter. However, with the help of his crew and his long lost son Igner, Farnsworth managed to bring the crystals close enough together to render dark matter useless. After converting to whale oil and receiving a few bribes for scientific endorsements, he joined the rest of the crew on a journey into a wormhole. Although most of the crew were killed as the ship crashed into Earth in early 3010, he survives and brings them back to life.
-		</p>
-		<img src="http://theinfosphere.org/images/c/c3/FarnsworthIgner.png" alt="Dark Matters" width="500px">
-		<h3>
-			Awards
-		</h3>
-		<p>
-			Professor Farnsworth has been given the following awards.
-		</p>
-		<ul>
-			<li>The <a href="http://theinfosphere.org/Academy_of_Inventors">Academy of Inventors</a> award of 3000 (1ACV08).</li>
-			<li>One Fields Medal (TBWABB).</li>
-			<li>The <a href="http://theinfosphere.org/Polluting_Medal_of_Pollution">Polluting Medal of Pollution</a> (4ACV08).</li>
-		</ul>
-		<h2>
-			Relationships
-		</h2>
-		<p>
-			Farnsworth has at on at least 3 occasions gone back to his major love, Mom. At around age 90, he worked for Mom's Friendly Robot Company, where he designed robots for the company as well as toys, such as Q. T. McWhiskers, but Mom's suggestion of turning the toy into a giant made Farnsworth leave her, because she simply didn't understand him and from then on conflict grew between them.
-			He would later return to Mom's company to work on creating actual robots, but back then, robots were stiff moving and not very efficient, however, when he sacrificed fuel efficiency, he succeeded, unfortunately, this robot design also caused global warming. Why he left Mom this time remains unsettled, but it may be because he once realised she was evil.
-			On a third occasion, Farnsworth was once again at the company with Mom, where he discovered the secret of Dark Matter, around the time where Mom's sons were born. But when he found out she had left him for Dr. Ogden Wernstrom, he left once again.
-			While his relationship with Mom has certainly been his largest, it has not been his only one. During a brief period of regaining the appearance of youth using stem cells from GeneWorks, S.K.G., he found a girl willing to date him, although she also turned out to have used her tax rebate for a belly ring to make her appear thinner. There was also a brief fling with Hattie while they were on the Titanic. However since then, Hattie seems to hold a strong hatred towards him; accusing him of being a "cat hater".
-			In the episode "Proposition Infinity", it is shown that the Professor had a 40 year long relationship with a woman whom he met before Mom. This woman cheated on the Professor with a robot which caused the Professor's hatred towards robossexual couples. It was also later revealed that that woman was herself a robot, and her name was Unit 47.
-			A creepy utilization of his body occurred in "The Prisoner of Benda", when he trades bodies with Amy. Amy then proceeds to trade bodies with Leela, causing Fry to himself trade bodies with Dr. Zoidberg. Leela used Farnsworth's body to prove that her relationship with Fry is partially physical. At dinner, Leela (in Farnsworth's Body) is disgusted by Fry (in Zoidberg's body), and vice-versa. When Leela-Farnsworth tells Fry-Zoidberg to prove his love, Fry-Zoidberg passionately kisses Leela-Farnsworth. This eventually leads to Leela-Farnsworth having Intercourse with Fry-Zoidberg. this marks the first known time he physically slept with a male. Mentally, however, Leela was the one who slept with Fry-Zoidberg.
-		</p>
-		<h2>Creations</h2>
-		<p>
-			The professor, being a vivid inventor, has created numerous inventions, ranging from very sophisticated to down right crazy.
-			Here is a list of the Professor's inventions (in alphabetical order)
-		</p>
-		<ul>
-			<li><a href="http://theinfosphere.org/Adolf_Hitler_Shark">Adolf Hitler Shark</a></li>
-			<li><a href="http://theinfosphere.org/A_Device_That_Makes_Anyone_Sound_Like_Farnsworth">A Device That Makes Anyone Sound Like Farnsworth</a></li>
-			<li><a href="http://theinfosphere.org/Smell-O-Scope">Smell-O-Scope</a></li>
-		</ul>
-
 	</div>
-
 </body>
 </html>
