added semantic sectioning tags

--- a/gallery.html
+++ b/gallery.html
@@ -6,50 +6,56 @@
 </head>
 <body>
 	<header>
-		<h1>Professor Hubert J. Farnsworth</h1>
+		<nav>
+			<h1>
+				Professor Hubert J. Farnsworth		
+			</h1>
+			<ul>
+				<li>
+					<a href="./index.html">				
+						Home
+					</a>
+				</li>
+				<li>
+					<a href="./about.html">				
+						About the Professor
+					</a>
+				</li>
+				<li>
+					<a href="./gallery.html">				
+						Memorable Moments
+					</a>
+				</li>
+				<li>
+					<a href="./work.html">				
+						Inventions
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</header>	
+	<main>
+		<h2>Memorable Moments</h2>
 		<ul>
 			<li>
-				<a href="./index.html">				
-					Home
-				</a>
+				<figure>
+					<img src="http://www.memegasms.com/media/created/vhyfxm.jpg" alt="Farnsworth">
+					<figcaption>Good news everyone!</figcaption>
+				</figure>
 			</li>
 			<li>
-				<a href="./about.html">				
-					About the Professor
-				</a>
+				<figure>
+					<img src="https://hollywoodhatesme.files.wordpress.com/2011/09/prof-farnsworth.jpg" alt="What if machine">
+					<figcaption>What if?</figcaption>
+				</figure>
 			</li>
 			<li>
-				<a href="./gallery.html">				
-					Memorable Moments
-				</a>
-			</li>
-			<li>
-				<a href="./work.html">				
-					Inventions
-				</a>
+				<figure>
+					<img src="http://data1.whicdn.com/images/60321699/large.jpg" alt="What if machine">
+					<figcaption>I don't want to live on this planet anymore.</figcaption>
+				</figure>
 			</li>
 		</ul>
-	</header>	
-	<h2></h2>
-	<ul>
-		<li>
-			<figure>
-				<img src="http://www.memegasms.com/media/created/vhyfxm.jpg" alt="Farnsworth">
-				<figcaption>Good news everyone!</figcaption>
-			</figure>
-		</li>
-		<li>
-			<figure>
-				<img src="https://hollywoodhatesme.files.wordpress.com/2011/09/prof-farnsworth.jpg" alt="What if machine">
-				<figcaption>What if?</figcaption>
-			</figure>
-		</li>
-		<li>
-			<figure>
-				<img src="http://data1.whicdn.com/images/60321699/large.jpg" alt="What if machine">
-				<figcaption>I don't want to live on this planet anymore.</figcaption>
-			</figure>
-		</li>
-	</ul>
+	</main>
 </body>
 </html>
