--- a/work.html
+++ b/work.html
@@ -6,54 +6,75 @@
 </head>
 <body>
 	<header>
-		<h1>Professor Hubert J. Farnsworth</h1>
-		<ul>
-			<li>
-				<a href="./index.html">				
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="./about.html">				
-					About the Professor
-				</a>
-			</li>
-			<li>
-				<a href="./gallery.html">				
-					Memorable Moments
-				</a>
-			</li>
-			<li>
-				<a href="./work.html">				
-					Inventions
-				</a>
-			</li>
-		</ul>
+		<nav>
+			<h1>
+				Professor Hubert J. Farnsworth		
+			</h1>
+			<ul>
+				<li>
+					<a href="./index.html">				
+						Home
+					</a>
+				</li>
+				<li>
+					<a href="./about.html">				
+						About the Professor
+					</a>
+				</li>
+				<li>
+					<a href="./gallery.html">				
+						Memorable Moments
+					</a>
+				</li>
+				<li>
+					<a href="./work.html">				
+						Inventions
+					</a>
+				</li>
+			</ul>
+		</nav>
 	</header>	
-	<h2>Creations</h2>
-	<p>
-		The professor, being a vivid inventor, has created numerous inventions, ranging from very sophisticated to down right crazy.
-		Here is a list of the Professor's inventions (in alphabetical order)
-	</p>
-	<dl>
-		<dt>What if machine</dt>
-		<dd>
-			The What-If Machine is a machine made out of gold that displays scenarios. These scenarios are given in the form of "what if" questions. The questions only have to make sense in context. At the end of "Twice Told Tales of Interest", the What-If machine (being used as a poker buddy by Bender) self destructed, because of a self-destruct chip Bender used when turning it into a robot thinking it was an Empathy Chip. However, Professor Farnsworth implied that the machine would be fixed in a year. Every time Farnsworth activates the machine, he uses a different button, lever, knob, or switch.
-			<img src="http://theinfosphere.org/images/9/98/What_if_Machine.jpg" alt="What if machine">
-		</dd>
-		<dt>Smell-O-Scope</dt>
-		<dd>
-			The Smell-O-Scope allows the user to smell odours over astronomically long distances ("If a dog craps anywhere in the universe, you can bet I won't be out of the loop"). It was created by Professor Farnsworth in 2999 and won the Academy of Inventors Academy Prize in 3000 after the prize had been taken away from Dr. Ogden Wernstrom as it became apparent that he was a jackass.
-			The degree of odour can be measured on a meter called the "Funkometer". It is unknown how the device functions, but it apparently has a lens and a stench coil.
-			As Cubert points out, it is impossible for odour molecules to travel through the vacuum of space and reach the user's nose. However, it is possible that the Smell-O-Scope actually analyzes various spectrums, determines the chemical makeup, and reproduces the smell within its nostril-tubes, much like a television reproduces sounds and images.
-			It is possible for the Smell-O-Scope to be mounted to the ship in order to track a smell to its origin. [2ACV10] It also caused the death of Nudar's time-paradox duplicate by crushing him after Farnsworth leant on it.
-			<img src="http://theinfosphere.org/images/1/18/Smell-O-Scope.png" alt="Smell-O-Scope">
-		</dd>
-		<dt>Device that makes anyone sound like Farnsworth</dt>
-		<dd>
-			The device that makes anyone sound like Farnsworth was created by Professor Hubert J. Farnsworth himself. It's a brown-coloured machine which changes one's voice to sound like his. Cubert and Dwight used it to trick the Planet Express crew into going on a fake delivery to a planet that doesn't exist (3ACV12). There's no target market for this device, only potential consumer, which Farnsworth describes as targets that will tremble in fear as their new masters hand down edicts in his glorious, booming voice.
-			<img src="http://theinfosphere.org/images/5/54/Farnsworthsounddevice.png" alt="Device that makes anyone sound like Farnsworth">
-		</dd>
-	</dl>
+	<main>
+		<section>		
+			<h2>Creations</h2>
+			<p>
+				The professor, being a vivid inventor, has created numerous inventions, ranging from very sophisticated to down right crazy.
+				Here is a list of the Professor's inventions (in alphabetical order)
+			</p>
+			<dl>
+				<dt>What if machine</dt>
+				<dd>
+					The What-If Machine is a machine made out of gold that displays scenarios. These scenarios are given in the form of "what if" questions. The questions only have to make sense in context. At the end of "Twice Told Tales of Interest", the What-If machine (being used as a poker buddy by Bender) self destructed, because of a self-destruct chip Bender used when turning it into a robot thinking it was an Empathy Chip. However, Professor Farnsworth implied that the machine would be fixed in a year. Every time Farnsworth activates the machine, he uses a different button, lever, knob, or switch.
+					<img src="http://theinfosphere.org/images/9/98/What_if_Machine.jpg" alt="What if machine">
+				</dd>
+				<dt>Smell-O-Scope</dt>
+				<dd>
+					The Smell-O-Scope allows the user to smell odours over astronomically long distances ("If a dog craps anywhere in the universe, you can bet I won't be out of the loop"). It was created by Professor Farnsworth in 2999 and won the Academy of Inventors Academy Prize in 3000 after the prize had been taken away from Dr. Ogden Wernstrom as it became apparent that he was a jackass.
+					The degree of odour can be measured on a meter called the "Funkometer". It is unknown how the device functions, but it apparently has a lens and a stench coil.
+					As Cubert points out, it is impossible for odour molecules to travel through the vacuum of space and reach the user's nose. However, it is possible that the Smell-O-Scope actually analyzes various spectrums, determines the chemical makeup, and reproduces the smell within its nostril-tubes, much like a television reproduces sounds and images.
+					It is possible for the Smell-O-Scope to be mounted to the ship in order to track a smell to its origin. [2ACV10] It also caused the death of Nudar's time-paradox duplicate by crushing him after Farnsworth leant on it.
+					<img src="http://theinfosphere.org/images/1/18/Smell-O-Scope.png" alt="Smell-O-Scope">
+				</dd>
+				<dt>Device that makes anyone sound like Farnsworth</dt>
+				<dd>
+					The device that makes anyone sound like Farnsworth was created by Professor Hubert J. Farnsworth himself. It's a brown-coloured machine which changes one's voice to sound like his. Cubert and Dwight used it to trick the Planet Express crew into going on a fake delivery to a planet that doesn't exist (3ACV12). There's no target market for this device, only potential consumer, which Farnsworth describes as targets that will tremble in fear as their new masters hand down edicts in his glorious, booming voice.
+					<img src="http://theinfosphere.org/images/5/54/Farnsworthsounddevice.png" alt="Device that makes anyone sound like Farnsworth">
+				</dd>
+			</dl>
+		</section>
+		<aside>
+			<h3>
+				Awards
+			</h3>
+			<p>
+				Professor Farnsworth has been given the following awards.
+			</p>
+			<ul>
+				<li>The <a href="http://theinfosphere.org/Academy_of_Inventors">Academy of Inventors</a> award of 3000 (1ACV08).</li>
+				<li>One Fields Medal (TBWABB).</li>
+				<li>The <a href="http://theinfosphere.org/Polluting_Medal_of_Pollution">Polluting Medal of Pollution</a> (4ACV08).</li>
+			</ul>
+		</aside>
+	</main>
 </body>
 </html>
