seperated nav from header

--- a/about.html
+++ b/about.html
@@ -5,36 +5,36 @@
 </head>
 <body>
 	<header>
-		<nav>
-			<h1>
-				Professor Hubert J. Farnsworth		
-			</h1>
-			<ul>
-				<li>
-					<a href="./index.html">				
-						Home
-					</a>
-				</li>
-				<li>
-					<a href="./about.html">				
-						About the Professor
-					</a>
-				</li>
-				<li>
-					<a href="./gallery.html">				
-						Memorable Moments
-					</a>
-				</li>
-				<li>
-					<a href="./work.html">				
-						Inventions
-					</a>
-				</li>
-			</ul>
-		</nav>
+		<h1>
+			About the Professor		
+		</h1>
 	</header>	
+	<nav>
+		<ul>
+			<li>
+				<a href="./index.html">				
+					Home
+				</a>
+			</li>
+			<li>
+				<a href="./about.html">				
+					About the Professor
+				</a>
+			</li>
+			<li>
+				<a href="./gallery.html">				
+					Memorable Moments
+				</a>
+			</li>
+			<li>
+				<a href="./work.html">				
+					Inventions
+				</a>
+			</li>
+		</ul>
+	</nav>
 	<main>
-		<h2>About the Professor</h2>
+		<h2>The Professor's History</h2>
 		<h3>
 			Personality
 		</h3>
