--- a/work.html
+++ b/work.html
@@ -6,34 +6,34 @@
 </head>
 <body>
 	<header>
-		<nav>
-			<h1>
-				Professor Hubert J. Farnsworth		
-			</h1>
-			<ul>
-				<li>
-					<a href="./index.html">				
-						Home
-					</a>
-				</li>
-				<li>
-					<a href="./about.html">				
-						About the Professor
-					</a>
-				</li>
-				<li>
-					<a href="./gallery.html">				
-						Memorable Moments
-					</a>
-				</li>
-				<li>
-					<a href="./work.html">				
-						Inventions
-					</a>
-				</li>
-			</ul>
-		</nav>
+		<h1>
+			The Inventions		
+		</h1>
 	</header>	
+	<nav>
+		<ul>
+			<li>
+				<a href="./index.html">				
+					Home
+				</a>
+			</li>
+			<li>
+				<a href="./about.html">				
+					About the Professor
+				</a>
+			</li>
+			<li>
+				<a href="./gallery.html">				
+					Memorable Moments
+				</a>
+			</li>
+			<li>
+				<a href="./work.html">				
+					Inventions
+				</a>
+			</li>
+		</ul>
+	</nav>
 	<main>
 		<section>		
 			<h2>Creations</h2>
