--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<header>
 		<h1>
-			Home		
+			Home
 		</h1>
 	</header>	
 	<nav>
@@ -29,6 +29,11 @@
 			<li>
 				<a href="./work.html">				
 					Inventions
+				</a>
+			</li>
+			<li>
+				<a href="./blog.html">				
+					Blog
 				</a>
 			</li>
 		</ul>
