--- a/about.html
+++ b/about.html
@@ -31,6 +31,11 @@
 					Inventions
 				</a>
 			</li>
+			<li>
+				<a href="./blog.html">				
+					Blog
+				</a>
+			</li>
 		</ul>
 	</nav>
 	<main>
