--- a/work.html
+++ b/work.html
@@ -32,6 +32,11 @@
 					Inventions
 				</a>
 			</li>
+			<li>
+				<a href="./blog.html">				
+					Blog
+				</a>
+			</li>
 		</ul>
 	</nav>
 	<main>
