added hidden title to navbar, typo fixes

--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,7 @@
 		</h1>
 	</header>	
 	<nav>
+		<h2 style="position: absolute; visibility: hidden;">Navigation</h2>
 		<ul>
 			<li>
 				<a href="./index.html">				
