--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 					Blog
 				</a>
 			</li>
+			<li>
+				<a href="./contact.html">				
+					Contact Him
+				</a>
+			</li>
 		</ul>
 	</nav>
 	<main>
