--- a/work.html
+++ b/work.html
@@ -38,6 +38,11 @@
 					Blog
 				</a>
 			</li>
+			<li>
+				<a href="./contact.html">				
+					Contact Him
+				</a>
+			</li>
 		</ul>
 	</nav>
 	<main>
